FIXED - img overflow done

--- a/css/app.css
+++ b/css/app.css
@@ -123,8 +123,14 @@ ul, li, .annulment {
 
 .hero-icon i {
     font-size: 50px;
-    margin-top: 100px;
+    margin-top: 80px;
     
+}
+
+.hero {
+    position: relative;
+    z-index: -1;
+    height: 690px;
 }
 
 
